fixing css white space and other minor adjustments

--- a/css.css
+++ b/css.css
@@ -353,15 +353,25 @@ footer {
 /* Image Gallery (on Home Page) *****************************************/
 
 #home-gallery {
-    margin-top: 4rem;
-    overflow: auto;
-    clear: both;
+    margin-top: 5rem;
+    padding: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+#home-gallery li.lnug-image {
+    width: auto;
+    text-align: left;
+    padding: 0;
+    list-style: none;
+    display: inline-block;
+    vertical-align: top;
+    max-width: 31%;
 }
 
 #home-gallery img {
-    float: left;
-    width: 29%;
-    margin: 2%;
+    width: 100%;
     transition: opacity 200ms;
 }
 
@@ -369,6 +379,26 @@ footer {
     opacity: 0.7;
 }
 
+// #home-gallery {
+//     margin-top: 4rem;
+//     overflow: auto;
+//     clear: both;
+// }
+// #home-gallery li.lnug-image {
+//     width: auto;
+//     display: inline-block;
+//     vertical-align: top;
+//     max-width: 31%;
+// }
+// #home-gallery img {
+//     float: left;
+//     width: 29%;
+//     margin: 2%;
+//     transition: opacity 200ms;
+// }
+// #home-gallery img:hover {
+//     opacity: 0.7;
+// }
 
 /* Image Gallery (Page) *****************************************/
 
@@ -389,10 +419,6 @@ footer {
 #gallery .single-image {
     float: left;
     height: auto;
-}
-
-#gallery .single-image:nth-child(3n+1) {
-    clear: left
 }
 
 @media (min-width: 700px) {
